[IMP] l10n_eu_product_adr: pre-commit auto fixes

--- a/l10n_eu_product_adr/views/adr_label_views.xml
+++ b/l10n_eu_product_adr/views/adr_label_views.xml
@@ -33,7 +33,9 @@
                             </div>
                             <div class="oe_kanban_details">
                                 <p>
-                                    <strong><field name="code" /></strong>
+                                    <strong>
+                                        <field name="code" />
+                                    </strong>
                                 </p>
                                 <p>
                                     <field name="name" />
