[MIG] l10n_eu_product_adr: Migration to 18.0

--- a/l10n_eu_product_adr/views/adr_label_views.xml
+++ b/l10n_eu_product_adr/views/adr_label_views.xml
@@ -20,7 +20,7 @@
             <kanban>
                 <field name="id" />
                 <templates>
-                    <t t-name="kanban-box">
+                    <t t-name="card">
                         <div
                             t-attf-class="oe_kanban_global_click"
                             style="min-width:450px;min-height:80px"
